Added styling, html structure, and scripts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Letters and Words</title>
+		
+		<link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
+		<link href="css/main.css" rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
-		<h1>Letters and Words</h1>
 		<div id="palette"></div>
 		<div id="canvas"></div>
+		
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+		<script src="js/main.js"></script>	
+	
 	</body>
 </html>
