--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div id="canvas">
-			<div id="trash"><a href="#"></a></div>
+			<div id="trash" title="Delete"><a href="#"></a></div>
 		</div>
 		
 		
