Added "Instructions" dialog box.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<body>
 		<div id="palette">
 			<div id="container">
+			  <button>Instructions</button>
+			  
 				<div id="accordion">
 				  <h3>Upper Case</h3>
 				  <div id="upperCase"></div>
@@ -26,6 +28,18 @@
 			</div>
 		</div>
 		<div id="canvas">
+		  <div id="dialog">
+         <h1>WELCOME TO MAGNETS!</h1>
+         <ol>
+           <li>To get started, drag letters from the left side (the palette) on to the right side (the canvas).</li>
+           <img src="img/dragletter.png" alt="Drag Letter">
+           <li>After dragging letters onto the canvas, you can drop them individually into the trashcan...</li>
+           <img src="img/deleteoneletter.png" alt="Drag Letter">
+           <li>...or delete them all at once by clicking on the trashcan.</li>
+           <img src="img/deleteallletters.png" alt="Drag Letter">
+         </ol>
+         <p>That's it!! Enjoy!!</p>
+        </div>
 			<div id="trash" title="Delete"><a href="#"></a></div>
 		</div>
 		
