fixed validation errors in code

--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
 		  <div id="dialog">
          <h1>WELCOME TO MAGNETS!</h1>
          <ol>
-           <li>To get started, drag letters from the left side (the palette) on to the right side (the canvas).</li>
-           <img src="img/dragletter.png" alt="Drag Letter">
-           <li>After dragging letters onto the canvas, you can drop them individually into the trashcan...</li>
-           <img src="img/deleteoneletter.png" alt="Drag Letter">
-           <li>...or delete them all at once by clicking on the trashcan.</li>
-           <img src="img/deleteallletters.png" alt="Drag Letter">
+           <li>To get started, drag letters from the left side (the palette) on to the right side (the canvas).<br>
+            <img src="img/dragletter.png" alt="Drag Letter">
+           </li>
+           
+           <li>After dragging letters onto the canvas, you can drop them individually into the trashcan...<br>
+            <img src="img/deleteoneletter.png" alt="Delete One Letter">
+           </li>
+           
+           <li>...or delete them all at once by clicking on the trashcan.<br>
+            <img src="img/deleteallletters.png" alt="Delete All Letters">
+           </li>
          </ol>
          <p>That's it!! Enjoy!!</p>
         </div>
